# mcp-test

./: .gitignore
mcp-pytest/: .gitignore  README.md  pyproject.toml
mcp-pytest/examples/: mcp_servers.yaml  mcp_servers_sample.yaml  pytest.ini  sample_server.py  test_example.py  test_sample_server.py
mcp-pytest/src/mcp_pytest/: __init__.py  plugin.py
mcp-pytest/src/mcp_pytest/assertions/: __init__.py  base.py  tool_result.py
mcp-pytest/src/mcp_pytest/cleanup/: __init__.py  cleaner.py  tracker.py
mcp-pytest/src/mcp_pytest/client/: __init__.py  manager.py  session.py  tool_caller.py
mcp-pytest/src/mcp_pytest/config/: __init__.py  loader.py  models.py
mcp-pytest/src/mcp_pytest/logging/: __init__.py  mcp_logger.py
mcp-pytest/tests/filesystem_test/: conftest.py  mcp_servers.yaml  pytest.ini  test_anyio.py  test_filesystem_mcp.py  test_framework_connect.py  test_function_scope.py  test_manual.py  test_no_fixture.py  test_simple.py
mcp-pytest/tests/filesystem_test/workspace/: sample.txt
mcp-pytest/tests/test_sample/: mcp_servers.yaml  pytest.ini
mcp-pytest/tests/ue_mcp_test/: README.md  conftest.py  mcp_servers.yaml  pytest.ini  test_capture_tools.py  test_diagnostic_tools.py  test_editor_configure.py  test_editor_execute.py  test_editor_management.py  test_project_build.py
